# cnn-gambling-blocker

./: .gitignore  Makefile  main.py  pyproject.toml
constant/: color.py  link.py  path.py  slds.py
inference/: inference_image.py
lib/: crawler.py  ocr.py
libs/: url.py
logger_pkg/: logger.py
model/image/: efficientnet_b0.ipynb  mobilenet_v3.ipynb
scraper/: constant.py  format_dataset.py  generate_master_dataset.py  generate_txt.py  instance.py  scrape.py  validate_dataset.py
types/: result.py
utils/: logger.py  url.py
